find_package(GTest REQUIRED)

add_executable(test_game test_game.cpp)
add_executable(test_engine test_engine.cpp)
add_executable(test_evaluator test_evaluator.cpp)
add_executable(test_planner test_planner.cpp)
add_executable(test_pokedex test_pokedex.cpp)
add_executable(test_gen4_scripts test_gen4_scripts.cpp)
add_executable(test_moves test_moves.cpp)

target_link_libraries(test_game pkaiEngine Boost::program_options Boost::filesystem GTest::GTest GTest::Main)
target_link_libraries(test_engine pkaiEngine Boost::program_options Boost::filesystem GTest::GTest GTest::Main)
target_link_libraries(test_evaluator pkaiEngine Boost::program_options Boost::filesystem GTest::GTest GTest::Main)
target_link_libraries(test_planner pkaiEngine Boost::program_options Boost::filesystem GTest::GTest GTest::Main)
target_link_libraries(test_pokedex pkaiEngine Boost::program_options Boost::filesystem GTest::GTest GTest::Main)
target_link_libraries(test_gen4_scripts pkaiEngine Boost::program_options Boost::filesystem GTest::GTest GTest::Main)
target_link_libraries(test_moves pkaiEngine Boost::program_options Boost::filesystem GTest::GTest GTest::Main)

include(GoogleTest)
gtest_discover_tests(test_game WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
gtest_discover_tests(test_engine WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
gtest_discover_tests(test_evaluator WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
gtest_discover_tests(test_planner WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
gtest_discover_tests(test_pokedex WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
gtest_discover_tests(test_gen4_scripts WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
gtest_discover_tests(test_moves WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
